--- a/contact_success.html
+++ b/contact_success.html
@@ -34,6 +34,7 @@
                     <input id="email" type="email" name="email" placeholder="Enter your email">
                     <label for="email"><button type="submit">></button></label>
                 </form>
+                <div class="contacts_success">The email sent successfully!</div>
             </div>
         </div>
 
