edit pages paths

--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
                     <ul class="nav_menu">
                         <div class="nav_close">x</div>
                         <li><a class="nav_link" href="/">Home</a></li>
-                        <li><a class="active nav_link" href="/about.html">About</a></li>
-                        <li><a class="nav_link" href="/projects.html">Projects</a></li>
-                        <li><a class="nav_link btn_green btn_grey" href="/contact.html">Contact me!</a></li>
+                        <li><a class="active nav_link" href="/about">About</a></li>
+                        <li><a class="nav_link" href="/projects">Projects</a></li>
+                        <li><a class="nav_link btn_green btn_grey" href="/contact">Contact me!</a></li>
                         <!-- <li><a class="nav_link" href="/login.html">Sign in</a></li>
                         <li><a class="nav_link btn_green" href="/reg.html">Sign up</a></li> -->
                     </ul>
@@ -29,7 +29,7 @@
                         Hello, <p>My name is Andrew.</p>
                         <span>I am originally from Russia - Samara. But, now I live in Poland, and I write code professionally since 2017. I am 21 years old, and I want to help entrepreneurs with their website problems, bugs, confusions or with adding some new ideas&edits.</span>
                         <div class="button">
-                            <button class="btn_green"><a href="/contact.html">Contact me</a></button>
+                            <button class="btn_green"><a href="/contact">Contact me</a></button>
                         </div>
                     </div>
                     <img src="./images/me.jpg" alt="my picture">
@@ -74,14 +74,14 @@
                     </div>
                 </div>
                 <div class="button">
-                    <button class="btn_green"><a href="/projects.html">See my projects</a></button>
+                    <button class="btn_green"><a href="/projects">See my projects</a></button>
                 </div>
             </section>
 
             <section class="contact about-me_contact">
                 <p class="title">Need to fix website?</p>
                 <div class="button">
-                    <a href="/contact.html"><button class="btn_green">Contact me</button></a>
+                    <a href="/contact"><button class="btn_green">Contact me</button></a>
                 </div>
             </section>
 
@@ -101,15 +101,14 @@
                         <p class="footer_title">Resources</p>
                         <ul>
                             <li>Services</li>
-                            <li><a href="/about.html">About me</a></li>
-                            <li><a href="/contact.html">Contact</a></li>
+                            <li><a href="/about">About me</a></li>
+                            <li><a href="/contact">Contact</a></li>
                         </ul>
                     </div>
                     <div class="footer_block">
-                        <p class="footer_title">Messenger</p>
+                        <p class="footer_title">Portfolio</p>
                         <ul>
-                            <li><a href="/login.html">Sign in</a></li>
-                            <li><a href="/reg.html">Sign up</a></li>
+                            <li><a href="/projects">Projects</a></li>
                         </ul>
                     </div>
                     <div class="footer_block">
