--- a/projects.html
+++ b/projects.html
@@ -16,9 +16,9 @@
                     <ul class="nav_menu">
                         <div class="nav_close">x</div>
                         <li><a class="nav_link" href="/">Home</a></li>
-                        <li><a class="nav_link" href="/about.html">About</a></li>
-                        <li><a class="active nav_link" href="/projects.html">Projects</a></li>
-                        <li><a class="nav_link btn_green btn_grey" href="/contact.html">Contact me!</a></li>
+                        <li><a class="nav_link" href="/about">About</a></li>
+                        <li><a class="active nav_link" href="/projects">Projects</a></li>
+                        <li><a class="nav_link btn_green btn_grey" href="/contact">Contact me!</a></li>
                         <!-- <li><a class="nav_link" href="/login.html">Sign in</a></li>
                         <li><a class="nav_link btn_green" href="/reg.html">Sign up</a></li> -->
                     </ul>
@@ -77,7 +77,7 @@
             <section class="contact">
                 <p class="title">Need to fix website?</p>
                 <div class="button">
-                    <a href="/contact.html"><button class="btn_green">Contact me</button></a>
+                    <a href="/contact"><button class="btn_green">Contact me</button></a>
                 </div>
             </section>
 
@@ -97,15 +97,14 @@
                         <p class="footer_title">Resources</p>
                         <ul>
                             <li>Services</li>
-                            <li><a href="/about.html">About me</a></li>
-                            <li><a href="/contact.html">Contact</a></li>
+                            <li><a href="/about">About me</a></li>
+                            <li><a href="/contact">Contact</a></li>
                         </ul>
                     </div>
                     <div class="footer_block">
-                        <p class="footer_title">Messenger</p>
+                        <p class="footer_title">Portfolio</p>
                         <ul>
-                            <li><a href="/login.html">Sign in</a></li>
-                            <li><a href="/reg.html">Sign up</a></li>
+                            <li><a href="/projects">Projects</a></li>
                         </ul>
                     </div>
                     <div class="footer_block">
