--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <div class="contacts">
             <div class="contacts_email">
                 <div class="contacts_title">Leave email, and I will contact you within an hour.</div>
-                <form action="/contact_success" method="post">
+                <form action="/contact/contact_success" method="post">
                     <input id="email" type="email" name="email" placeholder="Enter your email">
                     <label for="email"><button type="submit" formaction="/contact_success">></button></label>
                 </form>
