attempt 7 to fix submit error

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                 <div class="contacts_title">Leave email, and I will contact you within an hour.</div>
                 <form action="/contact/contact_success" method="post">
                     <input id="email" type="email" name="email" placeholder="Enter your email">
-                    <label for="email"><button type="submit" formaction="/contact_success">></button></label>
+                    <label for="email"><button type="submit" formaction="/contact/contact_success">></button></label>
                 </form>
             </div>
         </div>
