create project page

--- a/projects_layouts/project1.html
+++ b/projects_layouts/project1.html
@@ -17,7 +17,7 @@
                         <div class="nav_close">x</div>
                         <li><a class="nav_link" href="/">Home</a></li>
                         <li><a class="nav_link" href="/about">About</a></li>
-                        <li><a class="active nav_link" href="/projects">Projects</a></li>
+                        <li><a class="nav_link" href="/projects">Projects</a></li>
                         <li><a class="nav_link btn_green btn_grey" href="/contact">Contact me!</a></li>
                         <!-- <li><a class="nav_link" href="/login.html">Sign in</a></li>
                         <li><a class="nav_link btn_green" href="/reg.html">Sign up</a></li> -->
@@ -25,53 +25,18 @@
                 </nav>
             </header>
 
-            <section class="portfolio projects_portfolio">
+            <section class="project">
                 <p class="description">My Work</p>
-                <h2 class="title">My Portfolio</h2>
-                <div class="portfolio_blocks">
-                    <div class="portfolio_block">
-                        <img src="./images/r-portfolio1.png" alt="">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">Growbe Landing page</p>
-                            <button class="portfolio_btn"><a class="portfolio_link" href="/project1">View Details</a></button>
+                <h2 class="title">Growbe Landing page</h2>
+                <div class="project_blocks">
+                    <div class="project_block">
+                        <div class="project_b-a">
+                            <img src="./images/r-portfolio1.png" alt="">
                         </div>
-                    </div>
-                    <div class="portfolio_block">
-                        <img src="./images/portfolio2.png" alt="">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">Health & Fitness</p>
-                            <button class="portfolio_btn">View Details</button>
-                        </div>
-                    </div>
-                    <div class="portfolio_block">
-                        <img src="./images/portfolio3.png" alt="">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">Furniture Shop</p>
-                            <button class="portfolio_btn">View Details</button>
-                        </div>
-                    </div>
-                    <div class="portfolio_block">
-                        <img src="./images/portfolio4.png" alt="">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">IT Solution Provider</p>
-                            <button class="portfolio_btn">View Details</button>
-                        </div>
-                    </div>
-                    <div class="portfolio_block">
-                        <img src="./images/portfolio4.png" alt="">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">IT Solution Provider</p>
-                            <button class="portfolio_btn">View Details</button>
-                        </div>
-                    </div>
-                    <div class="portfolio_block">
-                        <img src="./images/portfolio4.png" alt="">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">IT Solution Provider</p>
-                            <button class="portfolio_btn">View Details</button>
-                        </div>
+                        <p class="project_detail">I fixed ...</p>
                     </div>
                 </div>
+                <p class="project_details">This work took me...</p>
             </section>
 
             <section class="contact">
