add first project to portfolio

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <img src="./images/landing-page.svg" alt="website from scratch service">
                             <p>Website development. Javascript</p>
                         </div>
-                        <p class="specialization_text">Frontend tasks - making webpages, without heavy plugins from scratch with just Javascript</p>
+                        <p class="specialization_text">Frontend tasks - making webpages, <span style="text-decoration: underline;">without</span> heavy plugins from scratch with Javascript only</p>
                         <a class="specialization_link">Read more</a>
                     </div>
                     <div class="specialization_block">
@@ -100,7 +100,7 @@
                         <img src="./images/r-portfolio1.png" alt="">
                         <div class="portfolio_details">
                             <p class="portfolio_name">Growbe Landing page</p>
-                            <button class="portfolio_btn">View Details</button>
+                            <a class="portfolio_link" href="/project1"><button class="portfolio_btn">View Details</button></a>
                         </div>
                     </div>
                     <div class="portfolio_block">
