--- a/projects_layouts/project1.html
+++ b/projects_layouts/project1.html
@@ -26,17 +26,96 @@
             </header>
 
             <section class="project">
-                <p class="description">My Work</p>
+                <p class="description">My Work - <a href="">Link here</a></p>
                 <h2 class="title">Growbe Landing page</h2>
                 <div class="project_blocks">
                     <div class="project_block">
-                        <div class="project_b-a">
-                            <img src="./images/r-portfolio1.png" alt="">
+                        <div class="project_timelines">
+                            <div class="project_txt">Before</div>
+                            <div class="project_txt">After</div>
                         </div>
-                        <p class="project_detail">I fixed ...</p>
+                        <div class="project_b-a">
+                            <div class="project_image">
+                                <div class="project_txt-mob">Before</div>
+                                <img src="./images/r-portfolio_b-a/before1.png" alt="">
+                            </div>
+                            <div class="project_image">
+                                <div class="project_txt-mob">After</div>
+                                <img src="./images/r-portfolio_b-a/after1.gif" alt="">
+                            </div>
+                        </div>
+                        <p class="project_detail">*I made a new design for menu here.</p>
+                    </div>
+                    <div class="project_block">
+                        <div class="project_timelines">
+                            <div class="project_txt">Before</div>
+                            <div class="project_txt">After</div>
+                        </div>
+                        <div class="project_b-a">
+                            <div class="project_image">
+                                <div class="project_txt-mob">Before</div>
+                                <img src="./images/r-portfolio_b-a/before9.png" alt="">
+                            </div>
+                            <div class="project_image">
+                                <div class="project_txt-mob">After</div>
+                                <img src="./images/r-portfolio_b-a/after9.png" alt="">
+                            </div>
+                        </div>
+                        <p class="project_detail">*Changes on mobile version, you can see how it looks <a href="">here</a> (on phone)</p>
+                    </div>
+                    <div class="project_block">
+                        <div class="project_timelines">
+                            <div class="project_txt">Before</div>
+                            <div class="project_txt">After</div>
+                        </div>
+                        <div class="project_b-a">
+                            <div class="project_image">
+                                <div class="project_txt-mob">Before</div>
+                                <img src="./images/r-portfolio_b-a/before10.png" alt="">
+                            </div>
+                            <div class="project_image">
+                                <div class="project_txt-mob">After</div>
+                                <img src="./images/r-portfolio_b-a/after10.png" alt="">
+                            </div>
+                        </div>
+                        <p class="project_detail">*Maybe you will not see it at first, but it makes the difference in users perceptions</p>
+                    </div>
+                    <div class="project_block">
+                        <div class="project_timelines">
+                            <div class="project_txt">Before</div>
+                            <div class="project_txt">After</div>
+                        </div>
+                        <div class="project_b-a">
+                            <div class="project_image">
+                                <div class="project_txt-mob">Before</div>
+                                <img src="./images/r-portfolio_b-a/before13.png" alt="">
+                            </div>
+                            <div class="project_image">
+                                <div class="project_txt-mob">After</div>
+                                <img src="./images/r-portfolio_b-a/after13.png" alt="">
+                            </div>
+                        </div>
+                        <p class="project_detail">*Fixing text and icons quality in slider</p>
+                    </div>
+                    <div class="project_block">
+                        <div class="project_timelines">
+                            <div class="project_txt">Before</div>
+                            <div class="project_txt">After</div>
+                        </div>
+                        <div class="project_b-a">
+                            <div class="project_image">
+                                <div class="project_txt-mob">Before</div>
+                                <img src="./images/r-portfolio_b-a/before15.png" alt="">
+                            </div>
+                            <div class="project_image">
+                                <div class="project_txt-mob">After</div>
+                                <img src="./images/r-portfolio_b-a/after15.png" alt="">
+                            </div>
+                        </div>
+                        <p class="project_detail">*And another problem was fixed</p>
                     </div>
                 </div>
-                <p class="project_details">This work took me...</p>
+                <p class="project_details">This work took me only half a day!</p>
             </section>
 
             <section class="contact">
