add link to growbe site

--- a/projects_layouts/project1.html
+++ b/projects_layouts/project1.html
@@ -26,7 +26,7 @@
             </header>
 
             <section class="project">
-                <p class="description">My Work - <a href="/portfolio-projects/GrowBe/">Link here</a></p>
+                <p class="description">My Work - <a href="https://grow-be-landing.vercel.app/">Link here</a></p>
                 <h2 class="title">Growbe Landing page</h2>
                 <div class="project_blocks">
                     <div class="project_block">
@@ -61,7 +61,7 @@
                                 <img src="./images/r-portfolio_b-a/after9.png" alt="">
                             </div>
                         </div>
-                        <p class="project_detail">*Changes on mobile version, you can see how it looks <a href="/portfolio-projects/GrowBe/">here</a> (on phone)</p>
+                        <p class="project_detail">*Changes on mobile version, you can see how it looks <a href="https://grow-be-landing.vercel.app/">here</a> (on phone)</p>
                     </div>
                     <div class="project_block">
                         <div class="project_timelines">
@@ -115,7 +115,7 @@
                         <p class="project_detail">*And another problem was fixed</p>
                     </div>
                 </div>
-                <p class="project_details">This work took me only half a day! <a href="/portfolio-projects/GrowBe/">link to site</a></p>
+                <p class="project_details">This work took me only half a day! <a href="https://grow-be-landing.vercel.app/">link to site</a></p>
             </section>
 
             <section class="contact">
