first project on portfolio completed

--- a/projects_layouts/project1.html
+++ b/projects_layouts/project1.html
@@ -115,7 +115,7 @@
                         <p class="project_detail">*And another problem was fixed</p>
                     </div>
                 </div>
-                <p class="project_details">This work took me only half a day! <a href="https://grow-be-landing.vercel.app/">link to site</a></p>
+                <p class="project_details">This work took me only half a day! <a href="https://growbe-before.vercel.app/">link to site before</a> <-> <a href="https://grow-be-landing.vercel.app/">link to version after</a>.</p>
             </section>
 
             <section class="contact">
