--- a/projects_layouts/project1.html
+++ b/projects_layouts/project1.html
@@ -112,7 +112,7 @@
                                 <img src="./images/r-portfolio_b-a/after15.png" alt="">
                             </div>
                         </div>
-                        <p class="project_detail">*And another problem was fixed</p>
+                        <p class="project_detail">*And another problem was fixed (like many others that you can see below...)</p>
                     </div>
                 </div>
                 <p class="project_details">This work took me only half a day! <a href="https://growbe-before.vercel.app/">link to site before</a> <-> <a href="https://grow-be-landing.vercel.app/">link to version after</a>.</p>
