--- a/index.html
+++ b/index.html
@@ -97,17 +97,17 @@
                 <h2 class="title">My Portfolio</h2>
                 <div class="portfolio_blocks">
                     <div class="portfolio_block">
-                        <img src="./images/r-portfolio1.png" alt="">
+                        <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">Growbe Landing page</p>
                             <a class="portfolio_link" href="/project1"><button class="portfolio_btn">View Details</button></a>
                         </div>
                     </div>
                     <div class="portfolio_block">
-                        <img src="./images/portfolio2.png" alt="">
+                        <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">Health & Fitness</p>
-                            <button class="portfolio_btn">View Details</button>
+                            <p class="portfolio_name">Philanthropy Landing</p>
+                            <a class="portfolio_link" href="/project2"><button class="portfolio_btn">View Details</button></a>
                         </div>
                     </div>
                     <div class="portfolio_block">
