change projects names

--- a/projects.html
+++ b/projects.html
@@ -32,14 +32,14 @@
                     <div class="portfolio_block">
                         <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">Growbe Landing page</p>
+                            <p class="portfolio_name">Fixing Growbe Landing page</p>
                             <button class="portfolio_btn"><a class="portfolio_link" href="/project1">View Details</a></button>
                         </div>
                     </div>
                     <div class="portfolio_block">
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">Health & Fitness</p>
+                            <p class="portfolio_name">Fixing Health & Fitness</p>
                             <button class="portfolio_btn">View Details</button>
                         </div>
                     </div>
