--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
                     <div class="portfolio_block">
                         <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">Growbe Landing page</p>
+                            <p class="portfolio_name">Fixing Growbe Landing page</p>
                             <a class="portfolio_link" href="/project1"><button class="portfolio_btn">View Details</button></a>
                         </div>
                     </div>
                     <div class="portfolio_block">
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">Philanthropy Landing</p>
+                            <p class="portfolio_name">Fixing Philanthropy Landing</p>
                             <a class="portfolio_link" href="/project2"><button class="portfolio_btn">View Details</button></a>
                         </div>
                     </div>
