add third project to portfolio

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                         </div>
                     </div>
                     <div class="portfolio_block">
-                        <img src="./images/portfolio3.png" alt="">
+                        <img src="./images/r-portfolio3.png" alt="California store project image">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">Furniture Shop</p>
-                            <button class="portfolio_btn">View Details</button>
+                            <p class="portfolio_name">California (Small-to-Medium size) Shop</p>
+                            <a class="portfolio_link" href="/project3"><button class="portfolio_btn">View Details</button></a>
                         </div>
                     </div>
                     <div class="portfolio_block">
