--- a/projects_layouts/project3.html
+++ b/projects_layouts/project3.html
@@ -17,7 +17,7 @@
                         <div class="nav_close">x</div>
                         <li><a class="nav_link" href="/">Home</a></li>
                         <li><a class="nav_link" href="/about">About</a></li>
-                        <li><a class="active nav_link" href="/projects">Projects</a></li>
+                        <li><a class="nav_link" href="/projects">Projects</a></li>
                         <li><a class="nav_link btn_green btn_grey" href="/contact">Contact me!</a></li>
                         <!-- <li><a class="nav_link" href="/login.html">Sign in</a></li>
                         <li><a class="nav_link btn_green" href="/reg.html">Sign up</a></li> -->
@@ -25,53 +25,29 @@
                 </nav>
             </header>
 
-            <section class="portfolio projects_portfolio">
-                <p class="description">My Work</p>
-                <h2 class="title">My Portfolio</h2>
-                <div class="portfolio_blocks">
-                    <div class="portfolio_block">
-                        <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">Fixing Growbe Landing page</p>
-                            <a class="portfolio_link" href="/project1"><button class="portfolio_btn">View Details</button></a>
+            <section class="project">
+                <p class="description">See what I have done with mobile version of that project: <a href="https://philanthropy-before.vercel.app/">link to site before</a> <-> <a href="https://philanthropy-after.vercel.app/">link to version after my work</a></p>
+                <h2 class="title">Philanthropy Landing</h2>
+                <div class="project_blocks">
+                    <div class="project_block">
+                        <div class="project_timelines">
+                            <div class="project_txt">Before</div>
+                            <div class="project_txt">After</div>
                         </div>
-                    </div>
-                    <div class="portfolio_block">
-                        <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">Fixing Health & Fitness</p>
-                            <a class="portfolio_link" href="/project2"><button class="portfolio_btn">View Details</button></a>
+                        <div class="project_b-a">
+                            <div class="project_image">
+                                <div class="project_txt-mob">Before</div>
+                                <img src="./images/r-portfolio_b-a2/before.png" alt="project example before my work">
+                            </div>
+                            <div class="project_image">
+                                <div class="project_txt-mob">After</div>
+                                <img src="./images/r-portfolio_b-a2/after.png" alt="project example after my work">
+                            </div>
                         </div>
-                    </div>
-                    <div class="portfolio_block">
-                        <img src="./images/r-portfolio3.png" alt="California store project image">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">California (Small-to-Medium size) Shop</p>
-                            <a class="portfolio_link" href="/project3"><button class="portfolio_btn">View Details</button></a>
-                        </div>
-                    </div>
-                    <div class="portfolio_block">
-                        <img src="./images/portfolio4.png" alt="">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">IT Solution Provider</p>
-                            <button class="portfolio_btn">View Details</button>
-                        </div>
-                    </div>
-                    <div class="portfolio_block">
-                        <img src="./images/portfolio4.png" alt="">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">IT Solution Provider</p>
-                            <button class="portfolio_btn">View Details</button>
-                        </div>
-                    </div>
-                    <div class="portfolio_block">
-                        <img src="./images/portfolio4.png" alt="">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">IT Solution Provider</p>
-                            <button class="portfolio_btn">View Details</button>
-                        </div>
+                        <p class="project_detail">This is just one of my fixes</p>
                     </div>
                 </div>
+                <p class="project_details">This work took me only half a day just like with <a href="/project1">Growbe</a>!</p>
             </section>
 
             <section class="contact">
