add first details of third project

--- a/projects_layouts/project3.html
+++ b/projects_layouts/project3.html
@@ -26,9 +26,9 @@
             </header>
 
             <section class="project">
-                <p class="description">See what I have done with mobile version of that project: <a href="https://philanthropy-before.vercel.app/">link to site before</a> <-> <a href="https://philanthropy-after.vercel.app/">link to version after my work</a></p>
-                <h2 class="title">Philanthropy Landing</h2>
-                <div class="project_blocks">
+                <p class="description">Link to that Store - <a href="https://california-store.vercel.app/">Link here</a></p>
+                <h2 class="title">California (Small-to-Medium size) Shop</h2>
+                <!-- <div class="project_blocks">
                     <div class="project_block">
                         <div class="project_timelines">
                             <div class="project_txt">Before</div>
@@ -44,10 +44,10 @@
                                 <img src="./images/r-portfolio_b-a2/after.png" alt="project example after my work">
                             </div>
                         </div>
-                        <p class="project_detail">This is just one of my fixes</p>
+                        <p class="project_detail">All </p>
                     </div>
-                </div>
-                <p class="project_details">This work took me only half a day just like with <a href="/project1">Growbe</a>!</p>
+                </div> -->
+                <p class="project_details">This project was made with Javascript. (Node.js, Express for backend)</p>
             </section>
 
             <section class="contact">
