add js project details

--- a/projects_layouts/project3.html
+++ b/projects_layouts/project3.html
@@ -26,28 +26,60 @@
             </header>
 
             <section class="project">
-                <p class="description">Link to that Store - <a href="https://california-store.vercel.app/">Link here</a></p>
                 <h2 class="title">California (Small-to-Medium size) Shop</h2>
-                <!-- <div class="project_blocks">
+                <p class="description">You can see on that site:</p>
+                <div class="project_blocks">
                     <div class="project_block">
                         <div class="project_timelines">
-                            <div class="project_txt">Before</div>
-                            <div class="project_txt">After</div>
+                            <div class="project_txt">Products categories</div>
+                            <div class="project_txt">Menu Searching</div>
                         </div>
                         <div class="project_b-a">
                             <div class="project_image">
-                                <div class="project_txt-mob">Before</div>
-                                <img src="./images/r-portfolio_b-a2/before.png" alt="project example before my work">
+                                <div class="project_txt-mob">Products categories</div>
+                                <img src="./images/r-portfolio_b-a3/feature1.png" alt="project example of my work">
                             </div>
                             <div class="project_image">
-                                <div class="project_txt-mob">After</div>
-                                <img src="./images/r-portfolio_b-a2/after.png" alt="project example after my work">
+                                <div class="project_txt-mob">Menu Searching</div>
+                                <img src="./images/r-portfolio_b-a3/feature2.gif" alt="project example of my work"> 
                             </div>
                         </div>
-                        <p class="project_detail">All </p>
                     </div>
-                </div> -->
-                <p class="project_details">This project was made with Javascript. (Node.js, Express for backend)</p>
+                    <div class="project_block">
+                        <div class="project_timelines">
+                            <div class="project_txt">Menu Animations</div>
+                            <div class="project_txt">Searching with hints</div>
+                        </div>
+                        <div class="project_b-a">
+                            <div class="project_image">
+                                <div class="project_txt-mob">Menu Animations</div>
+                                <img src="./images/r-portfolio_b-a3/feature3.gif" alt="project example of my work">
+                            </div>
+                            <div class="project_image">
+                                <div class="project_txt-mob">Searching with hints</div>
+                                <img src="./images/r-portfolio_b-a3/feature4.gif" alt="project example of my work">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project_block">
+                        <div class="project_timelines">
+                            <div class="project_txt">Slider</div>
+                            <div class="project_txt">Mobile version</div>
+                        </div>
+                        <div class="project_b-a">
+                            <div class="project_image">
+                                <div class="project_txt-mob">Slider</div>
+                                <img src="./images/r-portfolio_b-a3/feature5.gif" alt="project example of my work">
+                            </div>
+                            <div class="project_image">
+                                <div class="project_txt-mob">Mobile version</div>
+                                <img src="./images/r-portfolio_b-a3/feature6.gif" alt="project example of my work">
+                            </div>
+                        </div>
+                        <p class="project_detail">And many other things..</p>
+                    </div>
+                </div>
+                <p class="project_details">This project <a href="https://california-store.vercel.app/">(link)</a> was made with Javascript. (Node.js, Express for backend)</p>
             </section>
 
             <section class="contact">
