delete project page

--- a/index.html
+++ b/index.html
@@ -96,34 +96,27 @@
                 <p class="description">My Work</p>
                 <h2 class="title">My Portfolio</h2>
                 <div class="portfolio_blocks">
-                    <div class="portfolio_block">
-                        <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">Fixing Growbe Landing page</p>
-                            <a class="portfolio_link" href="/project1"><button class="portfolio_btn">View Details</button></a>
-                        </div>
-                    </div>
-                    <div class="portfolio_block">
+                    <a href="https://philanthropy-after.vercel.app/" class="portfolio_block">
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">Fixing Philanthropy Landing</p>
                             <a class="portfolio_link" href="/project2"><button class="portfolio_btn">View Details</button></a>
                         </div>
-                    </div>
-                    <div class="portfolio_block">
+                    </a>
+                    <a href="https://california-store.vercel.app/" class="portfolio_block">
                         <img src="./images/r-portfolio3.png" alt="California store project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">California (Small-to-Medium size) Shop</p>
                             <a class="portfolio_link" href="/project3"><button class="portfolio_btn">View Details</button></a>
                         </div>
-                    </div>
-                    <div class="portfolio_block">
-                        <img src="./images/portfolio4.png" alt="">
+                    </a>
+                    <a href="" class="portfolio_block">
+                        <img src="./images/r-portfolio1.png" alt="">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">IT Solution Provider</p>
-                            <button class="portfolio_btn">View Details</button>
+                            <p class="portfolio_name">Allbirds Landing Page</p>
+                            <a class="portfolio_link" href="/project3"><button class="portfolio_btn">View Details</button></a>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="button">
                     <button class="btn_green"><a href="/projects.html">All Projects</a></button>
