--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 <div class="about-me">
                     <div class="about-me_text">
                         Hello, <p>My name is Andrew.</p>
-                        <span>I am originally from Russia - Samara. But, now I live in Poland, and I write code professionally since 2017. I am 21 years old, and I want to help entrepreneurs with their website problems, bugs, confusions or with adding some new ideas&edits.</span>
+                        <span>I am from Poland, and I write code professionally since 2017! I am 21 years old, I want to help people with their website problems, bugs, confusions or with adding some new ideas&edits.</span>
                         <div class="button">
                             <button class="btn_green"><a href="/contact">Contact me</a></button>
                         </div>
