--- a/index.html
+++ b/index.html
@@ -96,25 +96,44 @@
                 <p class="description">My Work</p>
                 <h2 class="title">My Portfolio</h2>
                 <div class="portfolio_blocks">
-                    <a href="https://philanthropy-after.vercel.app/" class="portfolio_block">
-                        <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">Fixing Philanthropy Landing</p>
-                            <a class="portfolio_link" href="/project2"><button class="portfolio_btn">View Details</button></a>
+                    <a href="https://allbirds-landing.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer">
+                        <div class="portfolio_popup">
+                            <div class="portfolio_popup-text">
+                                <span class="portfolio_popup-close popup-close">x</span>
+                                HTML, CSS Landing Page, <br> Made withing 2 days. <br><br/> <span class="portfolio_popup-link">link to this site</span>
+                            </div>
                         </div>
-                    </a>
-                    <a href="https://california-store.vercel.app/" class="portfolio_block">
-                        <img src="./images/r-portfolio3.png" alt="California store project image">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">California (Small-to-Medium size) Shop</p>
-                            <a class="portfolio_link" href="/project3"><button class="portfolio_btn">View Details</button></a>
-                        </div>
-                    </a>
-                    <a href="" class="portfolio_block">
                         <img src="./images/r-portfolio1.png" alt="">
                         <div class="portfolio_details">
                             <p class="portfolio_name">Allbirds Landing Page</p>
-                            <a class="portfolio_link" href="/project3"><button class="portfolio_btn">View Details</button></a>
+                            <a class="portfolio_link"><button class="portfolio_btn portfolio-btn">View Details</button></a>
+                        </div>
+                    </a>
+                    <a href="https://philanthropy-after.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer">
+                        <div class="portfolio_popup">
+                            <div class="portfolio_popup-text">
+                                <span class="portfolio_popup-close popup-close">x</span>
+                                I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br/> <span class="portfolio_popup-link">link to this site</span>
+                                <span class="popup-link https://philanthropy-before.vercel.app/">Old version</span>
+                            </div>
+                        </div>
+                        <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
+                        <div class="portfolio_details">
+                            <p class="portfolio_name">Fixing Philanthropy Landing</p>
+                            <a class="portfolio_link"><button class="portfolio_btn portfolio-btn">View Details</button></a>
+                        </div>
+                    </a>
+                    <a href="https://california-store.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer">
+                        <div class="portfolio_popup">
+                            <div class="portfolio_popup-text">
+                                <span class="portfolio_popup-close popup-close">x</span>
+                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... <br><br/> <span class="portfolio_popup-link">link to this site</span>
+                            </div>
+                        </div>
+                        <img src="./images/r-portfolio3.png" alt="California store project image">
+                        <div class="portfolio_details">
+                            <p class="portfolio_name">California (Small-to-Medium size) Shop (under construction)</p>
+                            <a class="portfolio_link"><button class="portfolio_btn portfolio-btn">View Details</button></a>
                         </div>
                     </a>
                 </div>
