--- a/projects.html
+++ b/projects.html
@@ -30,45 +30,43 @@
                 <h2 class="title">My Portfolio</h2>
                 <div class="portfolio_blocks">
                     <div class="portfolio_block">
+                        <div class="portfolio_popup">
+                            <div class="portfolio_popup-text">
+                                <span class="portfolio_popup-close popup-close">x</span>
+                                HTML, CSS Landing Page from Figma, <br> Made withing 2 days. <br><br/> <a href="https://allbirds-landing.vercel.app/" class="portfolio_popup-link">link to this site</a>
+                            </div>
+                        </div>
                         <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">Fixing Growbe Landing page</p>
-                            <a class="portfolio_link" href="/project1"><button class="portfolio_btn">View Details</button></a>
+                            <p class="portfolio_name">Allbirds Landing Page from Figma to html, css</p>
+                            <a class="portfolio_link"><button class="portfolio_btn portfolio-btn">View Details</button></a>
                         </div>
                     </div>
                     <div class="portfolio_block">
+                        <div class="portfolio_popup">
+                            <div class="portfolio_popup-text">
+                                <span class="portfolio_popup-close popup-close">x</span>
+                                I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br/> <a href="https://philanthropy-after.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer">link to this site</a>
+                                <a href="https://philanthropy-before.vercel.app/" target="_blank" rel="noopener noreferrer">Old version</ф>
+                            </div>
+                        </div>
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">Fixing Health & Fitness</p>
-                            <a class="portfolio_link" href="/project2"><button class="portfolio_btn">View Details</button></a>
+                            <p class="portfolio_name">Fixing Philanthropy Landing page</p>
+                            <a class="portfolio_link" target="_blank" rel="noopener noreferrer"><button class="portfolio_btn portfolio-btn">View Details</button></a>
                         </div>
                     </div>
                     <div class="portfolio_block">
+                        <div class="portfolio_popup">
+                            <div class="portfolio_popup-text">
+                                <span class="portfolio_popup-close popup-close">x</span>
+                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... <br><br/> <a href="https://california-store.vercel.app/" target="_blank" rel="noopener noreferrer">link to this site</a>
+                            </div>
+                        </div>
                         <img src="./images/r-portfolio3.png" alt="California store project image">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">California (Small-to-Medium size) Shop</p>
-                            <a class="portfolio_link" href="/project3"><button class="portfolio_btn">View Details</button></a>
-                        </div>
-                    </div>
-                    <div class="portfolio_block">
-                        <img src="./images/portfolio4.png" alt="">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">IT Solution Provider</p>
-                            <button class="portfolio_btn">View Details</button>
-                        </div>
-                    </div>
-                    <div class="portfolio_block">
-                        <img src="./images/portfolio4.png" alt="">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">IT Solution Provider</p>
-                            <button class="portfolio_btn">View Details</button>
-                        </div>
-                    </div>
-                    <div class="portfolio_block">
-                        <img src="./images/portfolio4.png" alt="">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">IT Solution Provider</p>
-                            <button class="portfolio_btn">View Details</button>
+                            <p class="portfolio_name">California (Small-to-Medium size) Shop (under construction)</p>
+                            <a class="portfolio_link" target="_blank" rel="noopener noreferrer"><button class="portfolio_btn portfolio-btn">View Details</button></a>
                         </div>
                     </div>
                 </div>
