fix project under construction info

--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... <br><br/> <span class="portfolio_popup-link">link to this site</span>
+                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... (project under construction) <br><br/> <span class="portfolio_popup-link">link to this site</span>
                             </div>
                         </div>
                         <img src="./images/r-portfolio3.png" alt="California store project image">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">California (Small-to-Medium size) Shop (under construction)</p>
+                            <p class="portfolio_name">California Small-to-Medium size E-commerce</p>
                             <a class="portfolio_link"><button class="portfolio_btn portfolio-btn">View Details</button></a>
                         </div>
                     </a>
