add footer form

--- a/contact_success.html
+++ b/contact_success.html
@@ -61,9 +61,9 @@
                 </div>
                 <div class="footer_block">
                     <p class="footer_title">Get in touch in 5 seconds</p>
-                    <form action="">
+                    <form action="/contact" method="post">
                         <input id="email" type="text" name="email" placeholder="Enter your email">
-                        <label for="email">></label>
+                        <label for="email"><button type="submit">></button></label>
                     </form>
                 </div>
             </div>
