--- a/contact.html
+++ b/contact.html
@@ -66,9 +66,9 @@
                 </div>
                 <div class="footer_block">
                     <p class="footer_title">Get in touch in 5 seconds</p>
-                    <form action="">
-                        <input id="email" type="text" name="email" placeholder="Enter your email">
-                        <label for="email">></label>
+                    <form action="/contact" method="post">
+                        <input id="email" type="email" name="email" placeholder="Enter your email">
+                        <label for="email"><button type="submit">></button></label>
                     </form>
                 </div>
             </div>
