--- a/about.html
+++ b/about.html
@@ -92,9 +92,9 @@
                         <p class="footer_descr">I will find solution to your problems with your website</p>
 
                         <div class="footer_media-blocks">
-                            <img src="./images/fb.svg" alt="my facebook link">
-                            <img src="./images/twitter.svg" alt="my twitter link">
-                            <img src="./images/in.svg" alt="my linkedin link">
+                            <!-- <img src="./images/fb.svg" alt="my facebook link">
+                            <img src="./images/twitter.svg" alt="my twitter link"> -->
+                            <a href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer"><img src="./images/in.svg" alt="my linkedin link"></a>
                         </div>
                     </div>
                     <div class="footer_block">
@@ -112,11 +112,11 @@
                         </ul>
                     </div>
                     <div class="footer_block">
-                        <p class="footer_title">Get in touch in 5 seconds</p>
-                        <form action="/contact" method="post">
+                        <p class="footer_title">Get in touch with me <a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer">here</a></p>
+                        <!-- <form action="/contact" method="post">
                             <input id="email" type="text" name="email" placeholder="Enter your email">
                             <label for="email"><button type="submit">></button></label>
-                        </form>
+                        </form> -->
                     </div>
                 </div>
                 <div class="footer_copyright">
